--- a/ejercicio/src/index.css
+++ b/ejercicio/src/index.css
@@ -1,6 +1,45 @@
+@font-face {
+    font-family: Gotham;
+    src: url(fonts/Gotham\ Medium.otf);
+}
+
 body{
     background-color: #1DB954;
+    font-family: Gotham;
+}
+
+.App {
     
+}
+
+.App h1{
+    text-align: center;
+}
+
+.song{
+    display: inline-block; 
+    overflow: hidden; 
+    margin-left: 35px;
+    margin-right: 35px;
+    width: 300px;
+    height: 400px;
+    color: white;
+    border-radius: 15px;
+    text-align: center; 
+    background-color: black; 
+    transition: 0.5s;
+}
+
+.song h2 p{
+    width: auto;
+}
+
+.song:hover{
+    transform: scale(1.1);  
+}
+
+.song img{
+    padding-top: 15px;
 }
 
 .wait{
