--- a/ejercicio/src/index.css
+++ b/ejercicio/src/index.css
@@ -8,38 +8,35 @@ body{
     font-family: Gotham;
 }
 
-.App {
-    
-}
-
 .App h1{
     text-align: center;
 }
 
-.song{
-    display: inline-block; 
-    overflow: hidden; 
-    margin-left: 35px;
-    margin-right: 35px;
+.songParent {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    gap: 20px;
+}
+
+.song {
     width: 300px;
-    height: 400px;
+    flex: 1;
+
     color: white;
     border-radius: 15px;
-    text-align: center; 
-    background-color: black; 
+    background-color: black;
+    text-align: center;
+
     transition: 0.5s;
 }
 
-.song h2 p{
-    width: auto;
+.song img {
+    padding-top: 15px;
 }
 
 .song:hover{
-    transform: scale(1.1);  
-}
-
-.song img{
-    padding-top: 15px;
+    transform: scale(1.1);
 }
 
 .wait{
